bunch of exercises with an overview

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,10 @@
 $root-font-size: 1rem;
+
+$white: #ffffff;
+$black: #2b2b2b;
+
+
+$font-weight-normal: 400;
+$font-weight-bold: 900;
+$line-height: 1.5;
+$heading-line-height: 1.1;
