add background music. reduce p5 version to make p5.sound work with es modules

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -155,3 +155,11 @@ body {
     border-top: 5px solid #fd3c4e;
   }
 }
+
+.audio-toggle {
+  position: fixed;
+  top: 20px;
+  left: 240px;
+  padding: 0 .5rem;
+  font-size: 1.5rem;
+}
